# LevelUpAgent

./: .gitignore  AGENTS.md  Build-Windows.cmd  README.md  README_EN.md  package.json  pet.html  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESKTOP_PETS.md  LAYOUTS.md  PROMPT_HARNESS_IMPLEMENTATION_PLAN.md  PROMPT_PIPELINE_BASELINE.md  REFERENCE_RESEARCH.md  RELEASE.md  REPLACEMENT_AUDIT.md  ROADMAP.md  SECURITY_AUDIT.md  THEMES.md  THEME_AGENT_WORKFLOW.md  THEME_DEVELOPMENT.md
evals/harness-ab/: .gitignore  (+5 more)
layouts/: default.layout.json  qq2007.layout.json
scripts/: build-macos.sh  build-windows.ps1  test-hatch-progress.mjs  test-media-concurrency.mjs  test-writing.mjs  write-release-config.mjs
src/: App.css  App.tsx  PetOverlay.css  PetOverlay.tsx  pet-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: model_rules.json  prompt_compatibility.json
src-tauri/prompts/kernel/: platform.md
src-tauri/prompts/modes/: agent.md  chat.md  goal.md  plan.md
src-tauri/prompts/profiles/: claude_code_full.md  claude_code_lean.md  codex.md  grok_build.md  levelup_generic.md
src-tauri/prompts/source/: claude_code_fable_5.index.json  claude_code_fable_5.md  codex_gpt_5_6_sol.index.json  codex_gpt_5_6_sol.md  grok_build.index.json  grok_build.md
src-tauri/resources/skills/customize-levelup-layout/: SKILL.md
src-tauri/resources/skills/customize-levelup-layout/agents/: openai.yaml
src-tauri/resources/skills/customize-levelup-layout/references/: layout-schema.md
src-tauri/resources/skills/customize-levelup-layout/scripts/: validate-layout.mjs
src-tauri/resources/skills/hatch-pet/: SKILL.md
src-tauri/resources/skills/hatch-pet/scripts/: derive_running_left_from_running_right.py  finalize_pet_run.py  package_custom_pet.py  prepare_pet_run.py  render_animation_videos.py
src-tauri/src/: agent.rs  attachment.rs  config_writeback.rs  database.rs  harness.rs  layout.rs  lib.rs  media.rs  migration.rs  models.rs  pet.rs  prompt_compat.rs  skill.rs  theme.rs  tools.rs
theme/: qq-2007.levelup-theme
(+67 files in other folders)
